# claude-code-homeassistant-hermit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/commit/: SKILL.md
.claude/skills/release/: SKILL.md
agents/: ha-automation-builder.md  ha-pattern-analyst.md  ha-safety-reviewer.md
docs/: knowledge-schema.md
hooks/: curl-host-gate.py  hooks.json  mcp-safety-gate.py
skills/ha-analyze-patterns/: SKILL.md
skills/ha-apply-change/: SKILL.md
skills/ha-automation-error-review/: SKILL.md
skills/ha-boot/: SKILL.md
skills/ha-build-automation/: SKILL.md
skills/ha-hatch/: SKILL.md
skills/ha-house-status/: SKILL.md
skills/ha-integration-health/: SKILL.md
skills/ha-morning-brief/: SKILL.md
skills/ha-refresh-context/: SKILL.md
skills/ha-safety-audit/: SKILL.md
skills/hatch/: SKILL.md
src/ha_agent_lab/: __init__.py  apply.py  artifacts.py  audits.py  boot.py  cli.py  config.py  ha_api.py  markdown.py  policy.py  simulate.py
state-templates/: CLAUDE-APPEND.md
tests/: conftest.py  helpers.py  test_apply.py  test_audits.py  test_boot.py  test_cli_probe.py  test_curl_host_gate.py  test_markdown.py  test_policy.py  test_safety_hook.py  test_simulate.py
